# stones

./: .gitattributes  .gitignore  .ignore  Cargo.toml  Justfile  README.md  Trunk.toml  index.html
.cargo/: config.toml
art/blender/: low_poly.blend
art/models/mancala_board/: mancala_board_hi.fbx  physics.mtl
art/models/mancala_stone/: mancala_stone_hi.fbx  mancala_stone_low.fbx  physics.mtl
assets/: dynamic.assets.ron
assets/blender/: board.blend  board.glb  low_poly.blend  stone.blend
assets/colliders/: Board.0.msp  Board.1.msp  Board.msp
assets/materials/: Dots Stroke.glb  Material.glb  standardSurface1.003.glb
assets/scenes/: board.glb  low_poly.fbx  low_poly.glb  stone.glb  stone_physics.glb
assets/scenes/mancala_board/: display.mtl  mancala_board_low.fbx
assets/scenes/mancala_stone/: display.mtl  physics.mtl  physics.old  piece.glb
credits/: CREDITS.md
mobile/: Cargo.toml  manifest.yaml
mobile/android/: settings.gradle  utils.gradle
mobile/android/app/: build.gradle  keystore.properties
mobile/android/app/src/main/java/org/favil/stones/: MainActivity.java
mobile/android/gradle/: libs.versions.toml
mobile/android/stones/: build.gradle  version.properties
mobile/android/stones/src/main/: AndroidManifest.xml
mobile/src/: lib.rs
src/: assets.rs  bin.rs  events.rs  game.rs  graphics.rs  lib.rs  loading.rs  main.rs  physics.rs  ui.rs
src/game/actions/: board.rs  mod.rs  turn.rs  ui.rs
src/rules/: mod.rs
src/rules/variants/: kalah.rs  mod.rs
