[package]
name = "stones"
version = "0.1.0"
edition = "2021"
publish = false
resolver = "2"
authors = ["Favil Orbedios <favilo@gmail.com>"]

[workspace]
members = ["mobile"]

[lib]
# crate-type = ["rlib", "cdylib"]
name = "stones"
path = "src/lib.rs"

[[bin]]
name = "mancala"
path = "src/bin.rs"

[profile.dev]
lto = false
opt-level = 1
debug = true

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
debug = true

[profile.release]
lto = false
debug = true

# [profile.release]
# opt-level = "s"
# lto = true
# codegen-units = 1
# strip = true

# Profile for distribution
[profile.dist]
inherits = "release"
opt-level = 3
lto = true
codegen-units = 1
strip = true
debug = false


[dependencies]
avian3d = { version = "0.2.0", features = ["simd", "serialize"] }
bevy = { version = "0.15.1", features = ["file_watcher"] }
bevy_asset_loader = { version = "0.22.0", features = [
    "3d",
    "progress_tracking",
    "standard_dynamic_assets",
] }
# bevy_mod_billboard = { git = "https://github.com/kulkalkul/bevy_mod_billboard", branch = "main" }
# bevy_mod_picking = { version = "0.20.1", features = [] }
# bevy_obj = "0.15"
# blenvy = { git = "https://github.com/ptsd/Blenvy.git", branch = "blenvy-bevy-0.15" }
# bevy_rapier3d = { version = "0.28.0", features = [
#     "debug-render",
#     "parallel",
#     "serde-serialize",
#     "simd-stable",
#     "async-collider",
# ] }
iyes_progress = { version = "0.13.1", features = [] }
rmp-serde = "1.3.0"
serde = "1.0.217"
serde_json = "1.0.136"
thiserror = "2.0.11"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = [
    "tracing-log",
    "env-filter",
] }

[target.'cfg(not(target_os = "android"))'.dependencies]
# bevy-inspector-egui = { git = "https://github.com/jakobhellermann/bevy-inspector-egui.git", branch = "v0.28.1", version = "0.28.1" }
bevy-inspector-egui = { version = "0.28.1" }


# [patch.crates-io]
# bevy_mod_picking = { git = "https://github.com/StrikeForceZero/bevy_mod_picking.git", branch = "bevy-0.13" }
